--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,48 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Materialize JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
+<style>
+    body{
+        height: 100%;   
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #ccc;
+        height: 100%;
+    }
+    .si{
+        width: 80%;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        border-radius: 10px;
+    }
+    .in{
+        width: 90%;
+        min-height: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+</style>
 <body>
     <main>
         <div class="si">
             <div class="center">
-                <h2>Be The First To Know: Register For Job Listings!</h2>
-                <form action="">
-                <div class="in">
-                    <input type="text" id="name" required/>
-                    <label for="name"> name</label>
-                </div>
-                <br>
-                <div class="in">
-                    <input type="text" id="email" required/>
-                    <label for="email">email address</label>
-                </div>
-                <br>
-                <div class="in">
-                    <input type="text" id="password" required/>
-                    <label for="password">password</label>
-                </div>
-                <br>
-                <div class="in">
-                    <select id="job">
-                        <option value ="job"><b>Interested Job</b></option>
-                        <option value ="job">finance and accounting</option>
-                        <option value ="job">marketing and advertising</option>
-                        <option value ="job">system administrator</option>
-                        <option value ="job">network engineer</option>
-                        <option value ="job">data analyst</option>
-                        <option value ="job">cloud architect</option>
-                    </select>
-                </div>
-                <br>
-                <button class="SignUp">Sign Up</button>
-                <br>
-                <h3>already have an account?<a href="{% url 'login' %}">LOGIN</a> </h3>
+                <h3>Be The First To Know: Register For Job Listings!</h3>
+                <form action="signup" method="post">
+                    <h4>Sign up here</h4>
+                    <div class="input-field">
+                        <input type="text" id="name" name="name" required placeholder="Enter your name"/>
+                        <label for="name">Name</label>
+                    </div>
+                    <br>
+                    <div class="input-field">
+                        <input type="email" id="email" name="email" required placeholder="Enter your email"/>
+                        <label for="email">Email address</label>
+                    </div>
+                    <br>
+                    <div class="input-field">
+                        <input type="password" id="password" name="password" placeholder="Enter your password" required/>
+                        <label for="password">Password</label>
+                    </div>
+                    <br>
+                    <div class="input-field col s12">
+                        <select name="select_option">
+                            <option value="" disabled selected>Choose your option</option>
+                            <option value="1">Option 1</option>
+                            <option value="2">Option 2</option>
+                            <option value="3">Option 3</option>
+                        </select>
+                        <label>Select</label>
+                    </div>
                 
-
-                </form>
+                    <br>
+                    <input type="submit" class="btn" value="Submit">
+                    <br>
+                    <h6>Already have an account? <a href="login/">LOGIN</a></h6>
+                
             </div>
         </div>
     </main>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+          var elems = document.querySelectorAll('select');
+          var instances = M.FormSelect.init(elems);
+        });
+      </script>
+      
 </body>
 </html>
