--- a/templates/login.html
+++ b/templates/login.html
@@ -78,8 +78,9 @@
                             <br>
                             <br>
                             <h5>
-                                Don't have an account? <a href="signup.html"></a>
-                                <a href="{% url 'signup' %}">signup</a>
+                                Don't have an account?
+                                <a href="http://127.0.0.1:8000/signup/">signup</a>
+
                             </h5>
                         </form>
                     </div>
