--- a/templates/signup.html
+++ b/templates/signup.html
@@ -74,7 +74,7 @@
                     <br>
                     <input type="submit" class="btn" value="Submit">
                     <br>
-                    <h6>Already have an account? <a href="login/">LOGIN</a></h6>
+                    <h6>Already have an account? <a href="http://127.0.0.1:8000/login">signup</a></h6>
                 
             </div>
         </div>
